ajax ile id ye göre veri getirip tabloya yansitildi

--- a/Core_Proje/Views/ExperienceAjax/Index.cshtml
+++ b/Core_Proje/Views/ExperienceAjax/Index.cshtml
@@ -8,61 +8,72 @@
 
 <div class="col-md-6">
     <div class="p-2">
-        <button type="button" id="btngetlistall" class="btn btn-success">Verileri Getir</button>
+        <button type="button" id="btngetlistall" class="btn btn-warning">Verileri Getir</button>
         <button type="button" id="btnadd" class="btn btn-success">Ekle</button>
+        <button type="button" id="btnid" class="btn btn-info">Nuramaya Göre Getir</button>
     </div>
 </div>
 
-<h4 class="text-center">Deneyim Listesi</h4>
+<h4 class="text-center">Deneyim Listesi Paneli</h4>
 <div class="p2-" id="listexperience">
-    Verileri getirmek için lütfen butona tıklayınız..
+
+</div>
+<br />
+<div class="p2-" id="listidexperience">
+
 </div>
 <br />
 <div class="col-md-12">
-        <input type="text" class="form-control" id="inpname" placeholder="Başlık" />
-        <br />
-        <input type="text" class="form-control" id="inpdate" placeholder="Firma adı ve giriş / çıkış tarihi" />
-        <br />
-  
-    </div>
+    <h4>Ekleme Paneli</h4>
+    <input type="text" class="form-control" id="inpname" placeholder="Başlık" />
+    <br />
+    <input type="text" class="form-control" id="inpdate" placeholder="Firma adı ve giriş / çıkış tarihi" />
+    <br />
+</div>
+
+<div class="col-md-12">
+    <h4>Numaraya Göre Getirme Paneli</h4>
+    <input type="text" class="form-control" id="inpid" placeholder="Deneyim numarasını giriniz.." />
+    <br />
+</div>
 
 
 @section Scripts
 {
     <script>
-    $("#btngetlistall").click(function(){
-        $.ajax({
-            //iceregin türü
-            contentType: "application/json",
-            //verinin tipi
-            dataType: "json",
-            //get mi postlami calisacak
-            type: "Get",
-            //neredeki degeri getireceksin
-            url: "/ExperienceAjax/ListExperience/",
+        $("#btngetlistall").click(function () {
+            $.ajax({
+                //iceregin türü
+                contentType: "application/json",
+                //verinin tipi
+                dataType: "json",
+                //get mi postlami calisacak
+                type: "Get",
+                //neredeki degeri getireceksin
+                url: "/ExperienceAjax/ListExperience/",
 
-            //eger basarili olursa bana bir fonksiyon dön ismi funk olsun dedik
-            success: function (funk) {
-                //let ajax da/js de degisken tanimlamak icin kullanilir
-                //aldigimiz verileri jsona dondur dedik
-                let values = jQuery.parseJSON(funk);
-                console.log(values);
+                //eger basarili olursa bana bir fonksiyon dön ismi funk olsun dedik
+                success: function (funk) {
+                    //let ajax da/js de degisken tanimlamak icin kullanilir
+                    //aldigimiz verileri jsona dondur dedik
+                    let values = jQuery.parseJSON(funk);
+                    console.log(values);
 
-                //veriler icin tablo olusturduk
-                let htmlst = "<table class=table table-bordered> <tr><th> Başlık </th> <th> Tarih </th></tr>";
-                //each her biri icin
-                $.each(values, (index, value) => {
-                    htmlst += `<tr><td>${value.Name}</td> <td>${value.Date}</td> </tr>`
-                });
-                htmlst += "</table>";
+                    //veriler icin tablo olusturduk
+                    let htmlst = "<table class=table table-bordered> <tr><th> Başlık </th> <th> Tarih </th></tr>";
+                    //each her biri icin
+                    $.each(values, (index, value) => {
+                        htmlst += `<tr><td>${value.Name}</td> <td>${value.Date}</td> </tr>`
+                    });
+                    htmlst += "</table>";
 
-                //verileri tabloya yansitacaz
+                    //verileri tabloya yansitacaz
 
-                $("#listexperience").html(htmlst);
+                    $("#listexperience").html(htmlst);
 
-            }
+                }
+            });
         });
-    });
 
         $("#btnadd").click(function () {
             let values = {
@@ -78,6 +89,28 @@
                     alert(" Ekleme işlemi başarılı");
                 }
             });
+        });
+
+        $("#btnid").click(x => {
+            let id = $("#inpid").val();
+
+            $.ajax({
+                contentType: "aplication/json",
+                dataType: "json",
+                type: "Get",
+                url: "/ExperienceAjax/GetById",
+                data: { ExperienceId: id },
+                success: function (funk2) {
+
+                    let result = jQuery.parseJSON(funk2);
+                    console.log(result);
+
+                    let htmlst2 = `<table class=table table-hover> <tr> <th> Deneyim Numarası </th> <td>${result.ExperienceId}</td> </tr> <tr> <th> Başlık </th> <td>${result.Name}</td> </tr> <tr> <th> Firma / Tarih </th> <td>${result.Date}</td> </tr> </table> `;
+
+                    $("#listidexperience").html(htmlst2);
+                }
+            });
+
         });
     </script>
 }
