--- a/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
@@ -223,7 +223,7 @@
 
                 </div>
                 @*writerusercontrollerda yazdigimiz scriptsi calistırabilmek icin eklemek zorundayiz*@
-                @await RenderSectionAsync("Scripts")
+                @await RenderSectionAsync("Scripts",required:false)
                 <footer class="footer">
                     <div class="d-sm-flex justify-content-center justify-content-sm-between">
                         <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
