yazar sayfasi mini ve normal logunun hrefleri guncellendi, sayfa html ismi degistirildi

--- a/Core_Proje/Areas/Writer/Views/Default/HeadPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/HeadPartial.cshtml
@@ -2,7 +2,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Skydash Admin</title>
+    <title>Core 5.0 Yazar Sayfası</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="~/skydash/vendors/feather/feather.css">
     <link rel="stylesheet" href="~/skydash/vendors/ti-icons/css/themify-icons.css">
