--- a/Core_Proje/Areas/Writer/Views/Default/_NavbarPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/_NavbarPartial.cshtml
@@ -24,8 +24,8 @@
         <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item dropdown">
                 <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
-                    <i class="icon-bell mx-0"></i>
-                    <span class="count"></span>
+                    <i class="ti-announcement menu-icon mx-0"></i>
+                    @*<span class="count"></span>*@
                 </a>
 
 
