--- a/Core_Proje/Areas/Writer/Views/Shared/Components/Notification/Default.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Shared/Components/Notification/Default.cshtml
@@ -3,7 +3,7 @@
 @{ string color = "";}
 
 <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
-    <p class="mb-0 font-weight-normal float-left dropdown-header">Bildirimler</p>
+    <p class="mb-0 font-weight-normal float-left dropdown-header">Duyurular</p>
 
     @foreach (var item in Model)
     {
