yazar sayfasi mesaj tablolari butonlari aynı tek formata donusturuldu

--- a/Core_Proje/Areas/Writer/Views/Message/ReceiverMessage.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/ReceiverMessage.cshtml
@@ -50,7 +50,7 @@
                             <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
                             <td>@item.SenderName</td>
 
-                            <td><a href="/Writer/Message/ReceiverMessageDetails/@item.WriterMessageId" class="btn btn-outline-primary">Mesajı Gör</a></td>
+                            <td><a href="/Writer/Message/ReceiverMessageDetails/@item.WriterMessageId" class="btn btn-primary">Mesajı Gör</a></td>
                         </tr>
                         }
                     </tbody>
