--- a/Core_Proje/Areas/Writer/Views/Message/SenderMessage.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/SenderMessage.cshtml
@@ -51,7 +51,7 @@
                                 <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
                                 <td>@item.ReceiverName</td>
 
-                                <td><a href="/Writer/Message/SenderMessageDetails/@item.WriterMessageId" class="btn btn-outline-primary">Mesajı Gör</a></td>
+                                <td><a href="/Writer/Message/SenderMessageDetails/@item.WriterMessageId" class="btn btn-primary">Mesajı Gör</a></td>
                             </tr>
                         }
                     </tbody>
