--- a/Core_Proje/Areas/Writer/Views/Profile/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Profile/Index.cshtml
@@ -46,7 +46,7 @@
 
 
                 <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <button class="btn btn-light">İptal</button>
+                <button class="btn btn-danger">İptal</button>
             </form>
         </div>
     </div>
