admin dashboard giris yapan adminin adini soyadini ve resmini otomatik cekiyor artık

--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -3,49 +3,20 @@
         <div class="profile-desc">
             <div class="profile-pic">
                 <div class="count-indicator">
-                    <img class="img-xs rounded-circle " src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face15.jpg" alt="">
+                    <img class="img-xs rounded-circle " src="~/userimage/@ViewBag.v2" alt="">
                     <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
-                    <h5 class="mb-0 font-weight-normal">Mesut Rüzgar</h5>
-                    <span>Admin</span>
+                    <div class="profile-name">
+                       
+                        <h5 class="mb-0 font-weight-normal"> @ViewBag.v</h5>
+                        <span>@(User.IsInRole("Admin") ? "Admin" : "Normal Kullanıcı")</span>
+                    </div>
+
                 </div>
             </div>
-            <a href="#" id="profile-dropdown" data-toggle="dropdown"><i class="mdi mdi-dots-vertical"></i></a>
-            <div class="dropdown-menu dropdown-menu-right sidebar-dropdown preview-list" aria-labelledby="profile-dropdown">
-                <a href="#" class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                        <div class="preview-icon bg-dark rounded-circle">
-                            <i class="mdi mdi-settings text-primary"></i>
-                        </div>
-                    </div>
-                    <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Hesap Ayarları</p>
-                    </div>
-                </a>
-                <div class="dropdown-divider"></div>
-                <a href="#" class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                        <div class="preview-icon bg-dark rounded-circle">
-                            <i class="mdi mdi-onepassword  text-info"></i>
-                        </div>
-                    </div>
-                    <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Şifre Değiştir</p>
-                    </div>
-                </a>
-                <div class="dropdown-divider"></div>
-                <a href="#" class="dropdown-item preview-item">
-                    <div class="preview-thumbnail">
-                        <div class="preview-icon bg-dark rounded-circle">
-                            <i class="mdi mdi-calendar-today text-success"></i>
-                        </div>
-                    </div>
-                    <div class="preview-item-content">
-                        <p class="preview-subject ellipsis mb-1 text-small">Yapılacaklar Listesi</p>
-                    </div>
-                </a>
-            </div>
+           
+            
         </div>
     </li>
     <li class="nav-item nav-category">
