--- a/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
@@ -176,8 +176,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link" id="profileDropdown" href="#" data-toggle="dropdown">
                                 <div class="navbar-profile">
-                                    <img class="img-xs rounded-circle" src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/images/faces/face15.jpg" alt="">
-                                    <p class="mb-0 d-none d-sm-block navbar-profile-name">Mesut Rüzgar</p>
+                                    <img class="img-xs rounded-circle" src=~/userimage/@ViewBag.v2 alt="">
+                                    <p class="mb-0 d-none d-sm-block navbar-profile-name">@ViewBag.v</p>
                                     <i class="mdi mdi-menu-down d-none d-sm-block"></i>
                                 </div>
                             </a>
@@ -191,7 +191,7 @@
                                         </div>
                                     </div>
                                     <div class="preview-item-content">
-                                        <p class="preview-subject mb-1">Settings</p>
+                                        <p class="preview-subject mb-1">Ayarlar</p>
                                     </div>
                                 </a>
                                 <div class="dropdown-divider"></div>
@@ -202,11 +202,11 @@
                                         </div>
                                     </div>
                                     <div class="preview-item-content">
-                                        <p class="preview-subject mb-1">Log out</p>
+                                        <p class="preview-subject mb-1">Çıkış Yap</p>
                                     </div>
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <p class="p-3 mb-0 text-center">Advanced settings</p>
+                                <p class="p-3 mb-0 text-center"></p>
                             </div>
                         </li>
                     </ul>
