--- a/Core_Proje/Views/Contact/Index.cshtml
+++ b/Core_Proje/Views/Contact/Index.cshtml
@@ -33,8 +33,8 @@
                             <td>@item.Mail</td>
                             <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
 
-                            <td><a href="/Contact/ContactDetails/@item.MessageId" class="btn btn-outline-primary">Mesajı Gör</a></td>
-                            <td><a href="/Contact/DeleteContact/@item.MessageId" class="btn btn-outline-danger">Mesajı Sil</a></td>
+                            <td><a href="/Contact/ContactDetails/@item.MessageId" class="btn btn-warning">Mesajı Gör</a></td>
+                            <td><a href="/Contact/DeleteContact/@item.MessageId" class="btn btn-danger">Mesajı Sil</a></td>
                         </tr>
                         }
                     </tbody>
