--- a/Core_Proje/Views/Experience/AddExperience.cshtml
+++ b/Core_Proje/Views/Experience/AddExperience.cshtml
@@ -28,8 +28,8 @@
                         
                 </div>        
                 
-                <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
-                <a href="/Experience" class="btn btn-dark">İptal</a>
+                <button type="submit" class="btn btn-success mr-2">Kaydet</button>
+                <a href="/Experience" class="btn btn-danger">İptal</a>
             </form>
         </div>
     </div>
