--- a/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
+++ b/Core_Proje/Views/Portfolio/AddPortfolio.cshtml
@@ -45,7 +45,7 @@
 
 
                 <button type="submit" class="btn btn-success">Kaydet</button>
-                <a href="/Portfolio" class="btn btn-youtube">İptal</a>
+                <a href="/Portfolio" class="btn btn-danger">İptal</a>
             </form>
 
         </div>
