--- a/Core_Proje/Views/Portfolio/Index.cshtml
+++ b/Core_Proje/Views/Portfolio/Index.cshtml
@@ -54,7 +54,7 @@
 
                         <td>@item.Value%</td>
                         <td> <a href="/Portfolio/EditPortfolio/@item.PortfolioId" class="btn btn-warning">Güncelle</a></td>
-                        <td> <a href="/Portfolio/DeletePortfolio/@item.PortfolioId" class="btn btn-youtube">Sil</a></td>
+                        <td> <a href="/Portfolio/DeletePortfolio/@item.PortfolioId" class="btn btn-danger">Sil</a></td>
 
                     </tr>
 
