--- a/Core_Proje/Views/Service/AddService.cshtml
+++ b/Core_Proje/Views/Service/AddService.cshtml
@@ -19,7 +19,7 @@
                     <input type="text" name="ImageUrl" class="form-control">
                 </div>
                 <button type="submit" class="btn btn-success">Kaydet</button>
-                <a href="/Service" class="btn btn-youtube">İptal</a>
+                <a href="/Service" class="btn btn-danger">İptal</a>
             </form>
 
         </div>
