--- a/Core_Proje/Views/Skill/EditSkill.cshtml
+++ b/Core_Proje/Views/Skill/EditSkill.cshtml
@@ -26,8 +26,8 @@
                 
                 
 
-                <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <a href="/Skill" class="btn btn-dark">İptal</a>
+                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
+                <a href="/Skill" class="btn btn-danger">İptal</a>
             </form>
         </div>
     </div>
