--- a/Core_Proje/Views/SocialMedia/EditSocialMedia.cshtml
+++ b/Core_Proje/Views/SocialMedia/EditSocialMedia.cshtml
@@ -23,7 +23,7 @@
                     <input type="text" name="Url" class="form-control" value="@Model.Url">
                 </div>
 
-                <button type="submit" class="btn btn-success ">Güncelle</button>
+                <button type="submit" class="btn btn-warning ">Güncelle</button>
                 <a href="/SocialMedia" class="btn btn-danger">İptal</a>
             </form>
         </div>
