--- a/Core_Proje/Views/Testimonial/EditTestimonial.cshtml
+++ b/Core_Proje/Views/Testimonial/EditTestimonial.cshtml
@@ -32,7 +32,7 @@
                     <input type="text" name="Comment" class="form-control" value="@Model.Comment">
                 </div>
 
-                <button type="submit" class="btn btn-success mr-2">Güncelle</button>
+                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
                 <a href="/Testimonial" class="btn btn-danger">Geri</a>
             </form>
         </div>
