--- a/Core_Proje/Views/About/Index.cshtml
+++ b/Core_Proje/Views/About/Index.cshtml
@@ -44,8 +44,8 @@
 
 
 
-                <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <a href="/About" class="btn btn-dark">İptal</a>
+                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
+                <a href="/Dashboard/Index" class="btn btn-danger">İptal</a>
             </form>
         </div>
     </div>
