--- a/Core_Proje/Views/AdminMessage/AdminMessageSend.cshtml
+++ b/Core_Proje/Views/AdminMessage/AdminMessageSend.cshtml
@@ -22,7 +22,7 @@
                     <label for="exampleInputEmail3">Mesaj</label>
                     <input type="text" class="form-control" name="MessageContent" placeholder="Mesaj giriniz">
                 </div>
-                <button type="submit" class="btn btn-primary mr-2">Gönder</button>
+                <button type="submit" class="btn btn-success mr-2">Gönder</button>
                 
                 <a href="/AdminMessage/SenderMessageList" class="btn btn-danger">İptal</a>
             </form>
