--- a/Core_Proje/Views/Experience/EditExperience.cshtml
+++ b/Core_Proje/Views/Experience/EditExperience.cshtml
@@ -32,8 +32,8 @@
 
                 </div>
 
-                <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <a href="/Experience" class="btn btn-dark">İptal</a>
+                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
+                <a href="/Experience" class="btn btn-danger">İptal</a>
             </form>
         </div>
     </div>
