--- a/Core_Proje/Views/Feature/Index.cshtml
+++ b/Core_Proje/Views/Feature/Index.cshtml
@@ -26,8 +26,8 @@
                     <label for="exampleInputEmail3">Görev</label>
                     <input type="text" class="form-control" name="Title" value="@Model.Title">
                 </div>
-                <button type="submit" class="btn btn-primary mr-2">Güncelle</button>
-                <a href="/Dashboard/Index" class="btn btn-dark">İptal</a>
+                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
+                <a href="/Dashboard/Index" class="btn btn-danger">İptal</a>
             </form>
         </div>
     </div>
