--- a/Core_Proje/Views/Service/EditService.cshtml
+++ b/Core_Proje/Views/Service/EditService.cshtml
@@ -6,24 +6,32 @@
 }
 
 
-<div class="card-header border-0 d-flex align-items-center">
-    <h3 class="mb-0 mr-auto">Hizmet Güncelleme Sayfası</h3>
-</div>
-<br />
 
-<form method="post">
-    @Html.HiddenFor(model => model.ServiceId) 
-    <div class="form-group">
-        <label>Hizmet Adı</label>
-        <input type="text" name="Title" class="form-control" value="@Model.Title" />
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Hizmet Güncelleme</h4>
+            <form class="forms-sample" method="post">
+
+
+                @Html.HiddenFor(model => model.ServiceId)
+                <div class="form-group">
+                    <label for="exampleInputName1">Başlık</label>
+                    <input type="text" name="Title" class="form-control" value="@Model.Title" />
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">Resim Yolu</label>
+                    <input type="text" name="ImageUrl" class="form-control" value="@Model.ImageUrl">
+                </div>
+
+
+
+                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
+                <a href="/Service" class="btn btn-danger">İptal</a>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Resim Yolu</label>
-        <input type="text" name="ImageUrl" class="form-control" value="@Model.ImageUrl">
-    </div>
-    <button type="submit" class="btn btn-success">Güncelle</button>
-    <a href="/Service" class="btn btn-youtube">İptal</a>
-</form>
+</div>
 
 
 
