--- a/Core_Proje/Views/Service/Index.cshtml
+++ b/Core_Proje/Views/Service/Index.cshtml
@@ -33,15 +33,15 @@
 
 
                     <tr>
-                      
+
                         <td class="budget">
                             @item.Title
                         </td>
 
                         <td>
+                        <td> <a href="/Service/EditService/@item.ServiceId" class="btn btn-warning">Güncelle</a></td>
+                        <td> <a href="/Service/DeleteService/@item.ServiceId" class="btn btn-danger">Sil</a></td>
 
-                        <td> <a href="/Service/DeleteService/@item.ServiceId" class="btn btn-youtube">Sil</a></td>
-                        <td> <a href="/Service/EditService/@item.ServiceId" class="btn btn-info">Güncelle</a></td>
 
                     </tr>
                     }
