--- a/Core_Proje/Views/Skill/AddSkill.cshtml
+++ b/Core_Proje/Views/Skill/AddSkill.cshtml
@@ -22,8 +22,8 @@
                     <input type="text" class="form-control" name="Value" placeholder="Örn. 65">
                 </div>
 
-                <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
-                <a   href="/Skill" class="btn btn-dark">İptal</a>
+                <button type="submit" class="btn btn-success mr-2">Kaydet</button>
+                <a   href="/Skill" class="btn btn-danger">İptal</a>
             </form>
           
         </div>
