--- a/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
@@ -1,27 +1,28 @@
 ﻿@using EntityLayer.Concrete
+@model List<Message>
 
 
-@*<div class="col-md-6 col-xl-4 grid-margin stretch-card">
+<div class="col-md-6 col-xl-4 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
             <div class="d-flex flex-row justify-content-between">
-                <h4 class="card-title">Mesajlar</h4>
-                <p class="text-muted mb-1 small">Tümünü görüntüle</p>
+                <h4 class="card-title">Sayfadan Gelen Mesajlarlar</h4>
+                <a href="/Contact"><p class="text-muted mb-1 small">Tümünü görüntüle</p></a>
             </div>
             @foreach (var item in Model)
             {
                 <div class="preview-list">
                     <div class="preview-item border-bottom">
                         <div class="preview-thumbnail">
-                            <img src="@item.User.ImageUrl" alt="image" class="rounded-circle" />
+                            @*<img src="@item.User.ImageUrl" alt="image" class="rounded-circle" />*@
                         </div>
                         <div class="preview-item-content d-flex flex-grow">
                             <div class="flex-grow">
                                 <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                    <h6 class="preview-subject">@item.User.Name</h6>
+                                    <h6 class="preview-subject">@item.Name</h6>
                                     <p class="text-muted text-small">@item.Date</p>
                                 </div>
-                                <p class="text-muted">@item.Content.Substring(0,30)...</p>
+                                <p class="text-muted">@item.Content.Substring(0,10)...</p>
                             </div>
                         </div>
                     </div>
@@ -30,4 +31,4 @@
 
         </div>
     </div>
-</div>*@
+</div>
