--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -149,16 +149,13 @@
             <span class="menu-icon">
                 <i class="mdi mdi-security"></i>
             </span>
-            <span class="menu-title">Şifre ve Güvenlik</span>
+            <span class="menu-title">Hesap</span>
             <i class="menu-arrow"></i>
         </a>
         <div class="collapse" id="auth">
             <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/blank-page.html"> Blank Page </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-404.html"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/error-500.html"> 500 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/login.html"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/samples/register.html"> Register </a></li>
+                <li class="nav-item"> <a class="nav-link" href="./Profile/Index"> Profil </a></li>
+                <li class="nav-item"> <a class="nav-link" href="/Writer/Login/LogOut"> Çıkış yap </a></li>
             </ul>
         </div>
     </li>
