--- a/Core_Proje/Views/Shared/Components/AdminNavbarMessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/AdminNavbarMessageList/Default.cshtml
@@ -24,6 +24,6 @@
 
 
         <div class="dropdown-divider"></div>
-        <p class="p-3 mb-0 text-center">4 new messages</p>
+        <a href="/AdminMessage/ReceiverMessageList"><p class="p-3 mb-0 text-center">Gelen Kutusu</p> </a>
     </div>
 </li>
