--- a/Core_Proje/Views/Default/SendMessage.cshtml
+++ b/Core_Proje/Views/Default/SendMessage.cshtml
@@ -36,7 +36,7 @@
                 url: "/Default/SendMessageAjax/",
                 data: values,
                 success: function (response) {
-                    console.log(response);
+                   /* console.log(response);*/
                     alert("Mesaj başarıyla gönderildi");
                 }
             });
