--- a/Core_Proje/Views/WriterUser/Index.cshtml
+++ b/Core_Proje/Views/WriterUser/Index.cshtml
@@ -49,7 +49,7 @@
                 //let ajax da/js de degisken tanimlamak icin kullanilir
                 //aldigimiz verileri jsona dondur dedik
                 let users = jQuery.parseJSON(funk);
-                console.log(users);
+             /*   console.log(users);*/
             }
         });
     });
