--- a/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
+++ b/Core_Proje/Views/Shared/Components/MessageList/Default.cshtml
@@ -22,7 +22,7 @@
                                     <h6 class="preview-subject">@item.Name</h6>
                                     <p class="text-muted text-small">@item.Date</p>
                                 </div>
-                                <p class="text-muted">@item.Content.Substring(0,10)...</p>
+                                <p class="text-muted">@item.Content</p>
                             </div>
                         </div>
                     </div>
