--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -1,22 +1,9 @@
 ﻿<ul class="nav">
     <li class="nav-item profile">
         <div class="profile-desc">
-            <div class="profile-pic">
-                <div class="count-indicator">
-                    <img class="img-xs rounded-circle " src="~/userimage/@ViewBag.v2" alt="">
-                    <span class="count bg-success"></span>
-                </div>
-                <div class="profile-name">
-                    <div class="profile-name">
-                       
-                        <h5 class="mb-0 font-weight-normal"> @ViewBag.v</h5>
-                        <span>@(User.IsInRole("Admin") ? "Admin" : "Normal Kullanıcı")</span>
-                    </div>
 
-                </div>
-            </div>
-           
-            
+            @await Component.InvokeAsync("AdminNavSidebar")
+
         </div>
     </li>
     <li class="nav-item nav-category">
