--- a/Core_Proje/Views/Experience/EditExperience.cshtml
+++ b/Core_Proje/Views/Experience/EditExperience.cshtml
@@ -6,39 +6,60 @@
 }
 
 
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Deneyim Güncelleme</h4>
-            <form class="forms-sample" method="post">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <style>
+        select {
+            color: white !important; 
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Deneyim Güncelleme</h4>
+                <form class="forms-sample" method="post">
 
 
-                @Html.HiddenFor(model => model.ExperienceId)
-                <div class="form-group">
-                    <label for="exampleInputName1">Başlık</label>
-                    <input type="text" class="form-control" name="Name" value="@Model.Name">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Tarih</label>
-                    <input type="text" class="form-control" name="Date" value="@Model.Date">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword4">Resim Yolu</label>
-                    <input type="text" class="form-control" name="ImageUrl" value="@Model.ImageUrl">
-                </div>
-                <div class="form-group">
-                    <label for="exampleSelectGender">Açıklama</label>
-                    <input type="text" class="form-control" name="Description" value="@Model.Description">
+                    @Html.HiddenFor(model => model.ExperienceId)
+                    <div class="form-group">
+                        <label for="exampleInputName1">Başlık</label>
+                        <input type="text" class="form-control" name="Name" value="@Model.Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail3">Tarih</label>
+                        <input type="text" class="form-control" name="Date" value="@Model.Date">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword4">Platform</label>
+                        <select typeof="text" class="form-control" name="ImageUrl">
+                         
+                            <option value="/Template/images/services/windows-form.svg">C#</option>
+                            <option value="/Template/images/services/veri-tabani.svg">SQL</option>
+                            <option value="/Template/images/services/back-end.svg">Back-End</option>
+                            <option value="/Template/images/services/web-gelistirme.svg">Web Geliştirme</option>
+                            <option value="/Template/images/services/windows-form.svg">Mobil Uygulama Geliştirme </option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleSelectGender">Açıklama</label>
+                        <input type="text" class="form-control" name="Description" value="@Model.Description">
 
-                </div>
+                    </div>
 
-                <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
-                <a href="/Experience" class="btn btn-danger">İptal</a>
-            </form>
+                    <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
+                    <a href="/Experience" class="btn btn-danger">İptal</a>
+                </form>
+            </div>
         </div>
     </div>
-</div>
-
+</body>
+</html>
 
 
 
